test/test_examples/syntactic_examples/syntax_error/error_fun_def_18.zig
// Syntax error: invalid parameter data type

const ifj = @import("ifj24.zig"); 

pub fn foo( x : int ) void {

}  